--- a/PaksabaijainoiHotel/PaksabaijainoiHotel.csproj
+++ b/PaksabaijainoiHotel/PaksabaijainoiHotel.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutusForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutusForm.Designer.cs">
+      <DependentUpon>AboutusForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +79,9 @@
     <Compile Include="StartProgramForm.Designer.cs">
       <DependentUpon>StartProgramForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AboutusForm.resx">
+      <DependentUpon>AboutusForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
